crates/lex/snapshots/aeon__lex__tests__modules.snap
---
source: src/lex/mod.rs
expression: "lex(\"examples/modules.aeon\")"
---
Ok(
    [
        Keyword(
            Import,
        ),
        Literal(
            String(
                "std/io",
            ),
        ),
        Newline,
        Keyword(
            Fn,
        ),
        Identifier(
            "main",
        ),
        OpenParen,
        CloseParen,
        OpenBrace,
        Identifier(
            "list",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Reassign,
        ),
        Identifier(
            "LinkedList",
        ),
        Dot,
        Identifier(
            "new",
        ),
        OpenParen,
        CloseParen,
        Dot,
        Identifier(
            "push",
        ),
        OpenParen,
        Literal(
            Number(
                "0",
            ),
        ),
        CloseParen,
        Newline,
        Identifier(
            "io",
        ),
        Dot,
        Identifier(
            "printf",
        ),
        OpenParen,
        Literal(
            String(
                "%A\\n",
            ),
        ),
        Comma,
        Identifier(
            "list",
        ),
        CloseParen,
        Newline,
        OpenBrace,
        Identifier(
            "list",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Reassign,
        ),
        Identifier(
            "list",
        ),
        Newline,
        Dot,
        Identifier(
            "push",
        ),
        OpenParen,
        Literal(
            Number(
                "1",
            ),
        ),
        CloseParen,
        Newline,
        Dot,
        Identifier(
            "push",
        ),
        OpenParen,
        Literal(
            Number(
                "2",
            ),
        ),
        CloseParen,
        Newline,
        Dot,
        Identifier(
            "push",
        ),
        OpenParen,
        Literal(
            Number(
                "3",
            ),
        ),
        CloseParen,
        Newline,
        Identifier(
            "io",
        ),
        Dot,
        Identifier(
            "printf",
        ),
        OpenParen,
        Literal(
            String(
                "%A\\n",
            ),
        ),
        Comma,
        Identifier(
            "list",
        ),
        CloseParen,
        Newline,
        CloseBrace,
        Newline,
        Identifier(
            "io",
        ),
        Dot,
        Identifier(
            "printf",
        ),
        OpenParen,
        Literal(
            String(
                "%A\\n",
            ),
        ),
        Comma,
        Identifier(
            "list",
        ),
        CloseParen,
        Newline,
        CloseBrace,
        Newline,
        Keyword(
            Struct,
        ),
        Identifier(
            "LinkedList",
        ),
        OpenBrace,
        Keyword(
            Struct,
        ),
        Identifier(
            "Node",
        ),
        OpenBrace,
        Identifier(
            "data",
        ),
        Operator(
            Assign,
        ),
        Identifier(
            "i32",
        ),
        Newline,
        Identifier(
            "next",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Question,
        ),
        Operator(
            Star,
        ),
        Identifier(
            "Node",
        ),
        Newline,
        CloseBrace,
        Newline,
        Identifier(
            "root",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Question,
        ),
        Operator(
            Star,
        ),
        Identifier(
            "Node",
        ),
        Newline,
        Keyword(
            Fn,
        ),
        Identifier(
            "new",
        ),
        OpenParen,
        CloseParen,
        Identifier(
            "Self",
        ),
        OpenBrace,
        Keyword(
            Return,
        ),
        Identifier(
            "LinkedList",
        ),
        OpenBrace,
        Identifier(
            "root",
        ),
        Operator(
            Assign,
        ),
        Keyword(
            Null,
        ),
        CloseBrace,
        Newline,
        CloseBrace,
        Newline,
        Keyword(
            Fn,
        ),
        Identifier(
            "push",
        ),
        OpenParen,
        Identifier(
            "self",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Star,
        ),
        Identifier(
            "Self",
        ),
        Comma,
        Identifier(
            "item",
        ),
        Operator(
            Assign,
        ),
        Identifier(
            "i32",
        ),
        CloseParen,
        Identifier(
            "Self",
        ),
        OpenBrace,
        Identifier(
            "new_node",
        ),
        Operator(
            Assign,
        ),
        Operator(
            Reassign,
        ),
        Identifier(
            "malloc",
        ),
        OpenParen,
        Identifier(
            "Node",
        ),
        Comma,
        OpenBrace,
        Identifier(
            "data",
        ),
        Operator(
            Assign,
        ),
        Identifier(
            "item",
        ),
        Newline,
        Identifier(
            "next",
        ),
        Operator(
            Assign,
        ),
        Identifier(
            "self",
        ),
        Dot,
        Identifier(
            "root",
        ),
        Newline,
        CloseBrace,
        CloseParen,
        Newline,
        Identifier(
            "self",
        ),
        Dot,
        Identifier(
            "root",
        ),
        Operator(
            Reassign,
        ),
        Identifier(
            "malloc",
        ),
        OpenParen,
        Identifier(
            "Node",
        ),
        Comma,
        OpenBrace,
        Identifier(
            "data",
        ),
        Operator(
            Assign,
        ),
        Identifier(
            "item",
        ),
        Comma,
        CloseBrace,
        CloseParen,
        Newline,
        Keyword(
            Return,
        ),
        Identifier(
            "self",
        ),
        Newline,
        CloseBrace,
        Newline,
        CloseBrace,
        Newline,
    ],
)
